--- a/index.html
+++ b/index.html
@@ -5,17 +5,28 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Hi, I'm Jonas</title>
 
+  <link rel="apple-touch-icon" sizes="180x180" href="/static/img/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/static/img/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/static/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/static/img/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="/static/img/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
   <link rel="stylesheet"
         href="node_modules/material-components-web/dist/material-components-web.css">
-  <!--<link rel="stylesheet" href="node_modules/swiper/dist/css/swiper.min.css">-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/css/swiper.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/vue-mdc-adapter@^0.18.2/dist/vue-mdc-adapter.min.css" type="text/css">
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-        rel="stylesheet">
 
-  <script src="https://unpkg.com/vue-mdc-adapter"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" type="text/css">
+
+
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/js/swiper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 
@@ -31,5 +42,7 @@
 <script>
   var scroll = new SmoothScroll('a[href*="#"]');
 </script>
+
+<!--<script src="https://unpkg.com/typewriter-effect/dist/core.js"></script>-->
 </body>
 </html>
