added sitemap & meta information

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="description"
+        content="Hi, I'm Jonas, welcome to my personal website. Here you can find information about me, my portfolio, my experience and my papers. Feel free to reach out to me in case you have any questions or comments.">
+  <meta name="robots" content="index, follow">
   <title>Hi, I'm Jonas</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/static/img/favicon/apple-touch-icon.png">
@@ -34,12 +37,15 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134626781-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+
     gtag('js', new Date());
 
     gtag('config', 'UA-134626781-1');
   </script>
-
 
 
 </head>
