added og meta information

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:fb="http://ogp.me/ns/fb#"
+  lang="en"
+>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -17,6 +21,12 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/static/img/favicon/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
+
+  <meta property="og:url" content="https://jonas-miederer.de/"/>
+  <meta property="og:title" content="Hi, I'm Jonas"/>
+  <meta property="og:description"
+        content="Hi, I'm Jonas, welcome to my personal website. Here you can find information about me, my portfolio, my experience and my papers. Feel free to reach out to me in case you have any questions or comments."/>
+  <meta property="og:image" content="https://jonas-miederer.de/static/img/about/me_cleared_black.jpg"/>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.6/css/swiper.min.css">
   <link rel="stylesheet" href="https://unpkg.com/vue-mdc-adapter@^0.18.2/dist/vue-mdc-adapter.min.css" type="text/css">
